--- a/crudproject1/enroll/templates/enroll/base.html
+++ b/crudproject1/enroll/templates/enroll/base.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD-Django</title>
+    <title>Money AMC</title>
     <link rel="stylesheet" href="{% static 'enroll/css/bootstrap.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'enroll/css/icon.png' %}"/>
 </head>
 <body>
     <div class="container mt-5">
